# crb-puller-tg

./: bot.Dockerfile  cbr_puller.Dockerfile  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
bot/: dp.py  main.py
cbr_puller/: main.py
