[tool.poetry]
package-mode = false
name = "cbr"
version = "0.1.0"
description = ""
authors = ["YawKar <yawkarpov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
redis = "^5.0.7"
aiogram = "^3.10.0"
schedule = "^1.2.2"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"
testcontainers = {extras = ["redis"], version = "^4.7.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
typeCheckingMode = "strict"
verboseOutput = true
