[tool.poetry]
package-mode = false
name = "cbr"
version = "0.1.0"
description = ""
authors = ["YawKar <yawkarpov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
redis = "^5.0.7"
aiogram = "^3.10.0"
schedule = "^1.2.2"
typer = "^0.12.3"
pytz = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
typeCheckingMode = "strict"
verboseOutput = true
